--- a/src/index.css
+++ b/src/index.css
@@ -3,21 +3,36 @@
     margin: 0;
     box-sizing: border-box;
 }
-body{
-    background: rgb(234, 234, 234);
+
+.position {
+    position: relative; 
+    width: 100%;
+    height: 100vh; 
+    overflow: hidden; 
+    background-color: rgba(0, 0, 0, 0.5); 
+}
+.background{
+    position: absolute; 
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    z-index: -1; 
 }
 .body{
-    height: 80vh;
+    height: 100%;
     width: 100%;
+    font-size: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
    
+    margin-top: -70px;
 }
 .nav{
     width: 100%;
     height: 70px;
-    background-color:rgba(0, 0, 0, 0.7);
+    font-size: 0.7rem;
+    background-color:rgba(0, 0, 0, 0.3);
     color: white;
     display: flex;
     justify-content: space-between;
@@ -52,14 +67,14 @@ form button:hover{
     border: 2px solid red;
 }
 .main{
-    background-color: white;
+    background-color:rgba(0, 0, 0, 0.5);
+    color: white;
     padding: 25px;
-    max-width: 60vw;
-    height: 60vh;
+    max-width: 600px;
     display: flex;
     flex-direction: column;
     border-radius: 8px;
-    border: 2px solid black;
+    border: 2px solid white;
    
 }
 .top{
@@ -88,7 +103,7 @@ form button:hover{
     margin-top: 20px;
 }
 .right p{
-    width: 100px;
+    max-width: 100px;
 }
 
 
@@ -100,8 +115,8 @@ form button:hover{
   }
 
   @media (max-width: 500px) {
-   body{
-    font-size: 5px;
+   .body{
+    font-size: 0.6rem;
    }
    
   }
